# xlinq

./: LICENSE.md  MAINPAGE.md  README.md  doxygen.ini  html_footer.html  xlinq.h
doc/html/: LICENSE_8md.html  MAINPAGE_8md.html  README_8md.html  all_8h.html  all_8h_source.html  annotated.html  classes.html  classxlinq_1_1Enumerable-members.html  classxlinq_1_1Enumerable.html  classxlinq_1_1Exception-members.html  classxlinq_1_1Exception.html  classxlinq_1_1IBidirectionalEnumerable-members.html  classxlinq_1_1IBidirectionalEnumerable.html  classxlinq_1_1IBidirectionalEnumerator-members.html  classxlinq_1_1IBidirectionalEnumerator.html  classxlinq_1_1IEnumerable-members.html  classxlinq_1_1IEnumerable.html  classxlinq_1_1IEnumerator-members.html  classxlinq_1_1IEnumerator.html  classxlinq_1_1IGrouping-members.html  classxlinq_1_1IGrouping.html  classxlinq_1_1IRandomAccessEnumerable-members.html  classxlinq_1_1IRandomAccessEnumerable.html  classxlinq_1_1IRandomAccessEnumerator-members.html  classxlinq_1_1IRandomAccessEnumerator.html  classxlinq_1_1IterationFinishedException-members.html  classxlinq_1_1IterationFinishedException.html  classxlinq_1_1IterationNotStartedException-members.html  classxlinq_1_1KeyNotFoundException.html  (+120 more)
include/: xlinq.h  xlinq_aggregate.h  xlinq_average.h  xlinq_base.h  xlinq_cast.h  xlinq_concat.h  xlinq_count.h  xlinq_first.h  xlinq_groupjoin.h  xlinq_join.h  xlinq_max.h  xlinq_min.h  xlinq_oftype.h  xlinq_select.h  xlinq_select_many.h  xlinq_skip.h  xlinq_skipwhile.h  xlinq_std.h  xlinq_sum.h  xlinq_take.h  xlinq_takewhile.h  xlinq_where.h
test/: .gitignore  CMakeLists.txt  build.bat  build.sh  run.bat  run.sh  test.sln  test.vcxproj  test.vcxproj.filters  xlinq_aggregate_test.cpp  xlinq_all_test.cpp  xlinq_any_test.cpp  xlinq_avg_test.cpp  xlinq_base_test  xlinq_base_test.cpp  xlinq_basic_test.cpp  xlinq_concat_test.cpp  xlinq_count_test.cpp  xlinq_distinct_test.cpp  xlinq_element_at_test.cpp  xlinq_enumerable_test.cpp  xlinq_except_test.cpp  xlinq_first_test.cpp  xlinq_from_container_ptr_test.cpp  xlinq_from_container_shared_ptr_test.cpp  xlinq_from_container_test.cpp  xlinq_from_enumerable_test.cpp  xlinq_from_test.cpp  xlinq_gather_test.cpp  xlinq_group_by_test.cpp  xlinq_groupby_test.cpp  xlinq_intersect_test.cpp  xlinq_join_test.cpp  xlinq_last_test.cpp  xlinq_max_test.cpp  xlinq_min_test.cpp  xlinq_reverse_test.cpp  xlinq_select_many_test.cpp  xlinq_select_test.cpp  xlinq_sequence_equals_test.cpp  (+10 more)
test/model/: xlinq_test_model.h
(+104 files in other folders)
